; ModuleID = '/home/carl/AnghaBench/linux/scripts/extr_insert-sys-cert.c_endianness.c'
source_filename = "/home/carl/AnghaBench/linux/scripts/extr_insert-sys-cert.c_endianness.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ELFDATA2MSB = common dso_local global i8 0, align 1
@ELFDATA2LSB = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 ()* @endianness to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @endianness() #0 {
  %1 = alloca i8, align 1
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 255, i32* %2, align 4
  %4 = bitcast i32* %2 to i64*
  %5 = load i64, i64* %4, align 4
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i8, i8* @ELFDATA2MSB, align 1
  store i8 %9, i8* %1, align 1
  br label %12

10:                                               ; preds = %0
  %11 = load i8, i8* @ELFDATA2LSB, align 1
  store i8 %11, i8* %1, align 1
  br label %12

12:                                               ; preds = %10, %8
  %13 = load i8, i8* %1, align 1
  ret i8 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
